--- a/Basic Website/index.css
+++ b/Basic Website/index.css
@@ -10,8 +10,9 @@ body {
 /* Style the header */
 .header {
   padding: 80px;
+  text-transform: uppercase;
   text-align: center;
-  background: #af7223;
+  background: linear-gradient(to right, #fd7d12, #ffcf55);
   color: white;
 }
 
@@ -59,15 +60,17 @@ body {
   flex: 30%;
   background-color: #f1f1f1;
   padding: 20px;
+  background: #ddd;
 }
-.ShortNote{
-    margin-top: 60px;
+.ShortNote {
+  margin-top: 80px;
 }
 /* Main column */
 .main {
   flex: 70%;
   background-color: white;
   padding: 20px;
+  background: #ddd;
 }
 
 /* Fake image, just for this example */
@@ -81,7 +84,7 @@ body {
 .footer {
   padding: 20px;
   text-align: center;
-  background: #ddd;
+  background: rgb(134, 133, 133);
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
@@ -97,4 +100,11 @@ body {
     float: none;
     width: 100%;
   }
+}
+p {
+  margin-top: 80px;
+}
+.thankyou {
+  font-size: 60px;
+  padding-left: 50px;
 }
